nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-keisuke-one
  labels:
    run: server-keisuke-one
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  selector:
    run: server-keisuke-one
